.devops/kubernetes/kustomize/app/deployment.yaml
apiVersion : apps/v1
kind: Deployment 
metadata:
  name: kci
spec:
  template:
    spec:
      containers:
      - name: service
