.devops/kubernetes/kustomize/app/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kci
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
  - host: #appDomain#
    http:
      paths:
      - path: /
        backend:
          serviceName: kci
          servicePort: http
